--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/communicationsManagerLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/communicationsManagerLocations.yml
@@ -24,4 +24,4 @@ options:
 
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: Select the location or locations
