--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/outcomesLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/outcomesLocations.yml
@@ -28,4 +28,4 @@ options:
 
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: Select your location or locations
