Update error messages for boolean type questions for DOS5 services
Update error messages to align with Design System guidance [[1]].

[1]: https://design-system.service.gov.uk/components/radios/#error-messages

Co-authored-by: NoraGDS <57447099+NoraGDS@users.noreply.github.com>

--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/labBabyChanging.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/labBabyChanging.yml
@@ -8,4 +8,4 @@ depends:
 type: boolean
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: Select yes if you provide baby-changing facilities
