--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/anonymousRecruitment.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/anonymousRecruitment.yml
@@ -8,4 +8,6 @@ depends:
 
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: >
+      Select yes if you can recruit participants without revealing details of
+      the organisation you‘re recruiting for
