--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/manageIncentives.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/manageIncentives.yml
@@ -8,4 +8,6 @@ depends:
 
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: >
+      Select yes if you agree to manage any incentives to user research
+      participants
