Update error messages for text input type questions for DOS5 services
Update the error messages to align with Design System guidance [[1]].

[1]: https://design-system.service.gov.uk/components/text-input/#error-messages

--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/labAddressPostcode.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/labAddressPostcode.yml
@@ -9,7 +9,7 @@ type: text
 validations:
   -
     name: answer_required
-    message: 'You need to answer this question.'
+    message: Enter a postcode
   -
     name: under_character_limit
-    message: "Your answer must be no more than than 10 characters."
+    message: Postcode must be 10 characters or fewer
