--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/labAddressBuilding.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/labAddressBuilding.yml
@@ -9,10 +9,10 @@ type: text
 validations:
   -
     name: answer_required
-    message: 'You need to answer this question.'
+    message: Enter a building and street
   -
     name: under_20_words
-    message: 'Your answer must be no more than 20 words.'
+    message: Building and street must be 20 words or fewer
   -
     name: under_character_limit
-    message: "Your answer must be no more than 200 characters."
+    message: Building and street must be 200 characters or fewer
