--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/labAccessibility.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/labAccessibility.yml
@@ -13,10 +13,10 @@ max_length_in_words: 50
 validations:
   -
     name: answer_required
-    message: 'You need to answer this question.'
+    message: Enter how accessible your studio is
   -
     name: under_50_words
-    message: 'Your description must be no more than 50 words.'
+    message: Your answer must be 50 words or fewer
   -
     name: under_character_limit
-    message: "Your description must be no more than 500 characters."
+    message: Your answer must be 500 characters or fewer
