--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/labCarPark.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/labCarPark.yml
@@ -9,10 +9,10 @@ max_length_in_words: 50
 validations:
   -
     name: answer_required
-    message: 'You need to answer this question.'
+    message: Enter where visitors to your studio can park
   -
     name: under_50_words
-    message: 'Your description must be no more than 50 words.'
+    message: Your answer must 50 words or fewer
   -
     name: under_character_limit
-    message: "Your description must be no more than 500 characters."
+    message: Your answer must be 500 characters or fewer
