--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/labSize.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/labSize.yml
@@ -12,7 +12,7 @@ type: text
 validations:
   -
     name: answer_required
-    message: 'You need to answer this question.'
+    message: Enter how many people the research studio can accomodate
   -
     name: under_character_limit
-    message: "Your answer must be no more than 100 characters."
+    message: Your answer must be 100 characters or fewer
