Update error messages for radios type questions for DOS5 services
Update error messages to align with Design System guidance [[1]].

[1]: https://design-system.service.gov.uk/components/radios/#error-messages

--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/labWaitingArea.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/labWaitingArea.yml
@@ -13,4 +13,4 @@ options:
 
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: Select if you provide a waiting area
