--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/labDesktopStreaming.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/labDesktopStreaming.yml
@@ -13,4 +13,4 @@ options:
 
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: Select if you stream a view of the desktop or laptop screen
