--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/labStreaming.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/labStreaming.yml
@@ -13,4 +13,4 @@ options:
 
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: Select if you provide remote streaming from the studio
