--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/securityTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/securityTypes.yml
@@ -26,4 +26,4 @@ options:
 
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: Select the type or types of security you can provide
