--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/softwareDevelopmentTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/softwareDevelopmentTypes.yml
@@ -40,4 +40,4 @@ options:
 
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: Select the type or types of software development you can provide
