--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/supportAndOperationsTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/supportAndOperationsTypes.yml
@@ -27,4 +27,4 @@ options:
 
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: Select the type or types of support and operations you can provide
