--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/testingAndAuditingTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/testingAndAuditingTypes.yml
@@ -22,4 +22,4 @@ options:
 
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: Select the type or types of testing and auditing you will provide
