--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/userExperienceAndDesignTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/userExperienceAndDesignTypes.yml
@@ -28,4 +28,4 @@ options:
 
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: Select the type or types of user experence and design you will provide
