--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/userResearchTypes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/userResearchTypes.yml
@@ -18,4 +18,4 @@ options:
 
 validations:
   - name: answer_required
-    message: 'You need to answer this question.'
+    message: Select the type or types of user research you will provide
