Replace use of eg in error messages for DOS5 services
We should avoid the use of 'eg' in our content. I've replace it with
'like' here, following the example error messages in the Design System
guidance [[1]].

[1]: https://design-system.service.gov.uk/components/text-input/#if-the-input-is-not-a-number

--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/userResearcherDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/userResearcherDayRate.yml
@@ -17,4 +17,4 @@ validations:
     message: Enter the amount you will charge for a user researcher
   - name: not_money_format
     field: userResearcherPriceMax
-    message: "Maximum price must be a number, without units, eg 99.95"
+    message: Maximum price must be a number, without units, like 99.95
