--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/businessAnalystDayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/businessAnalystDayRate.yml
@@ -17,4 +17,4 @@ validations:
     message: Enter the amount you will charge for a business analyst
   - name: not_money_format
     field: businessAnalystPriceMax
-    message: "Maximum price must be a number, without units, eg 99.95"
+    message: Maximum price must be a number, without units, like 99.95
