--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/labPrice.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/labPrice.yml
@@ -17,4 +17,4 @@ validations:
     message: 'Enter the cost of using your research studio.'
   - name: not_money_format
     field: labPriceMin
-    message: "Minimum price must be a number, without units, eg 99.95"
+    message: Minimum price must be a number, without units, like 99.95
