--- a/frameworks/digital-outcomes-and-specialists-5/questions/services/userResearcher.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/services/userResearcher.yml
@@ -13,4 +13,4 @@ questions:
 
 empty_message: You have not added a user researcher
 
-hint: Design, conduct and analyse user research using a range of techniques, eg one-to-one interviews or usability tests.
+hint: Design, conduct and analyse user research using a range of techniques, for example one-to-one interviews or usability tests.
