--- a/frameworks/digital-outcomes-and-specialists-5/questions/declaration/conspiracy.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/declaration/conspiracy.yml
@@ -4,7 +4,7 @@ question: >
 
     - a participation offence as defined by section 45 of the Serious Crime Act 2015
     - conspiracy within the meaning of section 1 or 1A of the Criminal Law Act 1977
-    - conspiracy within the meaning of 9 or 9A of the Criminal Attempts and Conspiracy (Northern Ireland) Order 1983 where
+    - conspiracy within the meaning of article 9 or 9A of the Criminal Attempts and Conspiracy (Northern Ireland) Order 1983 where
       that conspiracy relates to participation in a criminal organisation as defined in article 2 of Council Framework
       Decision 2008/841/JHA on the fight against organised crime
 
