--- a/frameworks/digital-outcomes-and-specialists-5/manifests/edit_submission.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/manifests/edit_submission.yml
@@ -7,7 +7,7 @@
 - name: Service essentials
   editable: True
   description: >
-    You must be able to truthfully answer ‘yes’ to every question  for your
+    You must truthfully answer ‘yes’ to every question for your
     bid to be considered eligible. If you cannot answer ‘yes’ to every question
     in this section, it’s very unlikely that your bid will be accepted.
   questions:
@@ -20,7 +20,7 @@
 - name: User research participants essentials
   editable: True
   description: >
-    You must be able to truthfully answer ‘yes’ to every question for your bid
+    You must truthfully answer ‘yes’ to every question for your bid
     to be considered eligible. If you cannot answer ‘yes’ to every question in
     this section, it’s very unlikely that your bid will be accepted.
   questions:
