Add fields to exclude from DOS4 copying
Derived from https://github.com/alphagov/digitalmarketplace-frameworks/commit/e8048e43d00af1012ed21c2cb53e94942f0f0fd1#diff-f888f37478d3fbd5506ba0e480daddadL9

--- a/frameworks/digital-outcomes-and-specialists-5/metadata/copy_services.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/metadata/copy_services.yml
@@ -7,4 +7,24 @@ questions_to_exclude:
   - labTechAssistance
   - labViewingArea
   - labWaitingArea
+  - agileCoachPriceMin
+  - businessAnalystPriceMin
+  - communicationsManagerPriceMin
+  - contentDesignerPriceMin
+  - dataArchitectPriceMin
+  - dataEngineerPriceMin
+  - dataScientistPriceMin
+  - deliveryManagerPriceMin
+  - designerPriceMin
+  - developerPriceMin
+  - performanceAnalystPriceMin
+  - portfolioManagerPriceMin
+  - productManagerPriceMin
+  - programmeManagerPriceMin
+  - qualityAssurancePriceMin
+  - securityConsultantPriceMin
+  - serviceManagerPriceMin
+  - technicalArchitectPriceMin
+  - userResearcherPriceMin
+  - webOperationsPriceMin
 source_framework: digital-outcomes-and-specialists-4
