--- a/frameworks/digital-outcomes-and-specialists-4/questions/brief-responses/evidence.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/brief-responses/evidence.yml
@@ -4,7 +4,7 @@ max_length_in_words: 100
 validations:
   -
     name: answer_required
-    message: 'You need to provide evidence.'
+    message: 'Enter evidence for {{ item }}'
   -
     name: under_100_words
-    message: 'Your answer must be no more than 100 words.'
+    message: 'Your answer must be 100 words or fewer'
