--- a/frameworks/digital-outcomes-and-specialists-5/questions/brief-responses/availability.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/brief-responses/availability.yml
@@ -15,8 +15,8 @@ smaller: true
 validations:
   -
     name: answer_required
-    message: 'You need to answer this question.'
+    message: 'Enter a start date'
   -
     name: under_character_limit
-    message: "Your start date must be no more than 100 characters."
+    message: "Your start date must be 100 characters or fewer"
 empty_message: Set date
