Add niceToHaveRequirementsMet page

--- a/frameworks/digital-outcomes-and-specialists-4/manifests/edit_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/manifests/edit_brief_response.yml
@@ -6,5 +6,6 @@
     - dayRate
     - essentialRequirementsMet
     - essentialRequirements
+    - niceToHaveRequirementsMet
     - niceToHaveRequirements
     - respondToEmailAddress
