--- a/frameworks/digital-outcomes-and-specialists-4/questions/brief-responses/niceToHaveRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists-4/questions/brief-responses/niceToHaveRequirements.yml
@@ -6,16 +6,13 @@ question_advice: |
 
   The buyer will assess and score your evidence to shortlist the best suppliers.
 
-  <h3>Evidence structure</h3>
-  <div class="explanation-list">
-    <p class="lead">When you write your evidence, you should be specific about:</p>
+  ## Evidence structure
+  
+  When you write your evidence, you should be specific about:
 
-    <ul class="list-bullet">
-      <li>what the situation was</li>
-      <li>the work {% if brief.lotSlug == 'digital-outcomes' %}the team{% elif brief.lotSlug == 'digital-specialists' %}the specialist{% elif brief.lotSlug == 'user-research-participants' %}you{% endif %} did</li>
-      <li>what the results were</li>
-    </ul>
-  </div>
+  * what the situation was
+  * the work {% if brief.lotSlug == 'digital-outcomes' %}the team{% elif brief.lotSlug == 'digital-specialists' %}the specialist{% elif brief.lotSlug == 'user-research-participants' %}you{% endif %} did
+  * what the results were
 
   You should only provide one example for each nice-to-have requirement (unless the buyer specifies otherwise).
 
