--- a/frameworks/digital-outcomes-and-specialists-5/questions/brief-responses/essentialRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/brief-responses/essentialRequirements.yml
@@ -5,16 +5,13 @@ question_advice: |
 
   You’ll need to meet or exceed their requirements to get through to the next stage.
 
-  <h3>Evidence structure</h3>
-  <div class="explanation-list">
-    <p class="lead">When you write your evidence, you should be specific about:</p>
+  ## Evidence structure
+  
+  When you write your evidence, you should be specific about:
 
-    <ul class="list-bullet">
-      <li>what the situation was</li>
-      <li>the work {% if brief.lotSlug == 'digital-outcomes' %}the team{% elif brief.lotSlug == 'digital-specialists' %}the specialist{% elif brief.lotSlug == 'user-research-participants' %}you{% endif %} did</li>
-      <li>what the results were</li>
-    </ul>
-  </div>
+  * what the situation was
+  * the work {% if brief.lotSlug == 'digital-outcomes' %}the team{% elif brief.lotSlug == 'digital-specialists' %}the specialist{% elif brief.lotSlug == 'user-research-participants' %}you{% endif %} did
+  * what the results were
 
   You should only provide one example for each essential requirement (unless the buyer specifies otherwise).
 
