--- a/frameworks/digital-outcomes-and-specialists-5/messages/urls.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/messages/urls.yml
@@ -1,3 +1,4 @@
 framework_agreement_pdf_url: https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/947688/DOS5-framework-award-form.odt
 framework_agreement_url: https://www.gov.uk/guidance/digital-outcomes-and-specialists-5-legal-documents
 supplier_guide_url: https://www.gov.uk/guidance/digital-outcomes-and-specialists-suppliers-guide#how-to-apply
+call_off_contract_url: https://www.gov.uk/guidance/digital-outcomes-and-specialists-5-legal-documents
