--- a/frameworks/g-cloud-12/questions/services/lot.yml
+++ b/frameworks/g-cloud-12/questions/services/lot.yml
@@ -5,21 +5,21 @@ options:
   - label: Cloud hosting
     value: cloud-hosting
     description: |
-      Cloud hosting services are cloud platform or infrastructure services that can help buyers:
+      Services that are cloud platform or infrastructure help buyers to:
 
         - deploy, manage and run software
-        - provision and use processing, storage or networking resources
+        - provide and use processing, storage or network resources
 
-      On G-Cloud 8, cloud hosting was known as ‘Platform as a Service’ and ‘Infrastructure as a Service’.
+      They used to be known as ‘Platform as a Service’ and ‘Infrastructure as a Service’.
   - label: Cloud software
     value: cloud-software
     description: |
-      Cloud software services are applications that are accessed over the internet and hosted in the cloud.
+      Applications that can be accessed over the internet and hosted on the cloud.
 
-      On G-Cloud 8, cloud software was known as ‘Software as a Service’.
+      They used to be known as ‘Software as a Service’.
   - label: Cloud support
     value: cloud-support
     description: |
-      Cloud support services help buyers set up and maintain their cloud hosting or software services.
+      Services that help buyers set up and maintain their cloud hosting or software services.
 
-      On G-Cloud 8, cloud support was known as ‘Specialist Cloud Services’.
+      They used to be known as ‘Specialist Cloud Services’.
