Use bulleted lists for G-Cloud 12 questions
We spotted this bug while working on content loader changes
for these questions[[1]].

[1]: https://github.com/alphagov/digitalmarketplace-content-loader/pull/140

--- a/frameworks/g-cloud-12/questions/declaration/modernSlaveryStatement.yml
+++ b/frameworks/g-cloud-12/questions/declaration/modernSlaveryStatement.yml
@@ -3,7 +3,7 @@ question: >
   <p class="govuk-body">Upload a copy of your organisation’s slavery and human trafficking statement.</p>
 
   <p class="govuk-body">Your statement should:</p>
-  <ul class="govuk-list">
+  <ul class="govuk-list govuk-list--bullet">
     <li>be an Open Document Format (ODF) or PDF/A</li>
     <li>have a maximum file size of 5MB</li>
     <li>meet accessibility standards</li>
