Social Value is conditionally revealed
In this scenario, a user must select yes or no to 'socialWeightingOutcomesYesNo' before the 'socialWeighting' field is
revealed.

See https://github.com/alphagov/digitalmarketplace-api/commit/11b464dacf6d90b50741958eb8ec30b7462be3ba

--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/weightingOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/weightingOutcomes.yml
@@ -14,5 +14,7 @@ questions:
   - technicalWeightingOutcomes
   - culturalWeightingOutcomes
   - priceWeightingOutcomes
+  - socialWeightingOutcomesYesNo
+  - socialWeighting
 
 empty_message: Set evaluation weighting
