socialWeighting is another field on the evaluation weighting page
Social weighting is a similar question to the other weighting fields.

This requires some finagling in the Briefs Frontend app to ensure the data is correct.

--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/socialWeightingOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/socialWeightingOutcomes.yml
@@ -19,11 +19,9 @@ limits:
   min_value: 10
   max_value: 20
   integer_only: true
-hidden: true
+optional: true
 
 validations:
-  - name: answer_required
-    message: 'Enter a weighting.'
   - name: not_a_number
     message: 'Weighting must be between 10 and 20.'
   - name: total_should_be_100
