--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/weightingOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/weightingOutcomes.yml
@@ -14,7 +14,6 @@ questions:
   - technicalWeightingOutcomes
   - culturalWeightingOutcomes
   - priceWeightingOutcomes
-  - socialWeightingOutcomesYesNo
-  - socialWeighting
+  - socialWeightingOutcomes
 
 empty_message: Set evaluation weighting
