DO NOT MERGE Add new questions to flow
This WILL need to be merged, but we cannot do so until we have completed the work, since adding it to the flow and deploying the Briefs app
will set these changes live.

--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/weightingOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/weightingOutcomes.yml
@@ -14,5 +14,6 @@ questions:
   - technicalWeightingOutcomes
   - culturalWeightingOutcomes
   - priceWeightingOutcomes
+  - socialWeightingOutcomes
 
 empty_message: Set evaluation weighting
