--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/weightingParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/weightingParticipants.yml
@@ -14,5 +14,6 @@ questions:
   - technicalWeightingParticipants
   - culturalWeightingParticipants
   - priceWeightingParticipants
+  - socialWeightingParticipants
 
 empty_message: Set evaluation weighting
