--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/weightingSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/weightingSpecialists.yml
@@ -14,5 +14,6 @@ questions:
   - technicalWeightingSpecialists
   - culturalWeightingSpecialists
   - priceWeightingSpecialists
+  - socialWeightingSpecialists
 
 empty_message: Set evaluation weighting
