Add depends to socialValueCriteria
socialValueCriteria questions rely on `socialWeighting` to be 0 or 10 - 20.

We can check this in the relevant app and pass it through into the filter.

If `socialWeighting` is not present or falls outside those ranges, we don't
display `socialValueCriteria` in the content.

--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/socialValueCriteriaSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/socialValueCriteriaSpecialists.yml
@@ -15,6 +15,14 @@ depends:
   - "on": "lot"
     being:
       - digital-specialists
+  - "on": "socialWeighting"
+    being:
+      - min_value: 0
+        max_value: 0
+        type: integer
+      - min_value: 10
+        max_value: 20
+        type: integer
 
 validations:
   -
