--- a/frameworks/digital-outcomes-and-specialists-5/questions/briefs/socialValueCriteriaParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists-5/questions/briefs/socialValueCriteriaParticipants.yml
@@ -13,6 +13,14 @@ depends:
   - "on": "lot"
     being:
       - user-research-participants
+  - "on": "socialWeighting"
+    being:
+      - min_value: 0
+        max_value: 0
+        type: integer
+      - min_value: 10
+        max_value: 20
+        type: integer
 
 validations:
   -
